--- a/src/assets/i18n/US/en.json
+++ b/src/assets/i18n/US/en.json
@@ -1,7 +1,7 @@
 {
   "login": {
-    "title": "Sign in to ng2-admin",
-    "signup_link": "New to ng2-admin? Sign up!",
+    "title": "Sign in to chatstir",
+    "signup_link": "New to chatstir? Sign up!",
     "email": "Email",
     "password": "Password",
     "sign_in": "Sign in",
@@ -18,7 +18,7 @@
       "option1": "Option 1"
     },
     "menu": {
-      "dashboard": "Dashboard",
+      "dashboard": "DashDash",
       "editors": "Editors",
       "ck_editor": "CKEditor",
       "components": "Components",
