--- a/src/assets/i18n/US/en.json
+++ b/src/assets/i18n/US/en.json
@@ -38,6 +38,7 @@
       "basic_tables": "Basic Tables",
       "smart_tables": "Smart Tables",
       "maps": "Maps",
+      "areas": "Areas",
       "map_dashboard": "Map Dashboard",
       "area_list": "Area List",
       "area_builder": "Area Builder",
