Added dashboard and builder pages

--- a/src/assets/i18n/US/en.json
+++ b/src/assets/i18n/US/en.json
@@ -39,7 +39,7 @@
       "smart_tables": "Smart Tables",
       "maps": "Maps",
       "areas": "Areas",
-      "map_dashboard": "Map Dashboard",
+      "area_dashboard": "Area Dashboard",
       "area_list": "Area List",
       "area_builder": "Area Builder",
       "chats": "Chats",
